<resources>
    <string name="app_name">10122914UTS</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>

    <string name="btn_ok">Ok</string>
    <string name="desk_1">Selamat datang di MySelf Apps</string>
    <string name="desk_2">Aplikasi Ini Berisi Tentang Informasi Data Diri</string>
    <string name="desk_3">Untuk Beberapa Data Bersifat Dummy</string>

    <string name="text_daily">Daily Activity</string>

    <string name="nama">Dwi Nurcahyo</string>
    <string name="ttl">Ciamis, 01 Maret 1997</string>
    <string name="intro">Saya Adalah Mahasiswa Universitas Komputer Indonesia</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>