<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Slide">
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager.widget.ViewPager>
    <Button
        android:id="@+id/prev"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_prev"
        android:layout_alignParentBottom="true"
        android:onClick="prev"/>

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="next"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="ok"/>
</RelativeLayout>